# IRC-Bot

./: Bot.cpp  Bot.hpp  BotClass.cpp  BotClass.hpp  C++.gitignore  CMakeLists.txt  Compile.bat  README.md  TcpSocket.cpp  TcpSocket.hpp  ircMimic.cpp  ircMimic.hpp  main.cpp  serverMessageStruct.cpp  serverMessageStruct.hpp
